2010-11-30  NIIBE Yutaka  <gniibe@fsij.org>

	Flash ROM fixes for STM32F10X_HD.
	* src/gnuk.ld.in (.gnuk_flash): Use FLASH_PAGE_SIZE.
	* src/configure (FLASH_PAGE_SIZE): Defined for gnuk.ld.
	* src/flash.c (FLASH_PAGE_SIZE): New define.
	(FLASH_DATA_POOL_SIZE): Use FLASH_PAGE_SIZE.

	Import changes of ChibiOS_2.0.8.
	* ChibiOS_2.0.8/os/hal/include/pwm.h
	* ChibiOS_2.0.8/os/hal/platforms/STM32/pwm_lld.c
	* ChibiOS_2.0.8/os/hal/platforms/STM32/pwm_lld.h
	* ChibiOS_2.0.8/os/hal/src/pwm.c
	* ChibiOS_2.0.8/os/hal/templates/pwm_lld.c
	* ChibiOS_2.0.8/os/hal/templates/pwm_lld.h
	* ChibiOS_2.0.8/os/kernel/include/ch.h
	* ChibiOS_2.0.8/os/kernel/src/chevents.c
	* ChibiOS_2.0.8/os/kernel/src/chthreads.c
	* ChibiOS_2.0.8/boards/OLIMEX_LPC_P2148/board.h
	* ChibiOS_2.0.8/readme.txt
	* ChibiOS_2.0.8/test/testdyn.c
	* ChibiOS_2.0.8/docs/*

	New private key management.
	* src/ac.c (ac_reset_pso_cds, ac_reset_pso_other): Call
	gpg_do_clear_prvkey.
	(verify_pso_other): load private keys here.
	* src/openpgp-do.c (kd): Keydata for Signing, Decryption, and
	Authentication.
	(gpg_do_load_prvkey, gpg_do_write_prvkey): Use kd[].
	(gpg_do_clear_prvkey): New function.
	* src/openpgp.c (cmd_pso, cmd_internal_authenticate): Use new API
	of rsa_sign and rsa_decrypt.
	(cmd_pso): Fixed bug of checking return value of gpg_get_pw1_lifetime.

	* src/call-rsa.c (rsa_sign): New argument KD.
	(rsa_decrypt): Likewise.

	Don't use malloc/free in C library.
	* src/stdlib.h (malloc, free): Use chHeapAlloc and chHeapFree.

2010-11-26  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STM8S_DISCOVERY/*: New.
	* src/configure: STM8S_DISCOVERY only has 64KB flash memory.

	* boards/STBEE_MINI/board.h (CPU_WITH_NO_GPIOE): New define.
	* ChibiOS_2.0.6/os/hal/platforms/STM32/hal_lld.c: Use it.
	* ChibiOS_2.0.6/os/hal/platforms/STM32/pal_lld.c: Likewise.
	* ChibiOS_2.0.6/os/hal/platforms/STM32/pal_lld.h: Likewise.

	* src/openpgp.c (cmd_pso): DigestInfo by SHA224/SHA384/SHA512 is
	supported.
