@@ -55,14 +55,16 @@ Tested features are:
 
 It is known not-working well:
 
-	* Key import multiple times
-
 	* For some version of kernel and libccid, --enable-debug can't
           work well.  Please disable DEBUG option if it doesn't work well.
 
 Not (yet) supported feature(s):
 
 	* card holder certificate (its size matters (> 1KiB?), if we support)
+
+Not supported feature(s):
+
+	* Overriding key import.  You need to remove all keys first.
 
 
 Targets
