@@ -6,8 +6,9 @@ encouraging the development, testing the implementation, suggesting
 improvements, or fixing bugs.  Here is a list of those people.
 
 Hironobu SUZUKI		hironobu@h2np.net
-Jan Sur			jan@suhr.info
+Jan Suhr		jan@suhr.info
 Kaz Kojima		kkojima@rr.iij4u.or.jp
+Ludovic Rousseau	ludovic.rousseau@free.fr
 MATSUU Takuto		matsuu@gentoo.org
 NAGAMI Takeshi		nagami-takeshi@aist.go.jp
 Shane Coughlan		scoughlan@openinventionnetwork.com
